--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor quos fugit tenetur commodi tempore nostrum odio vel id numquam, in culpa, temporibus quod voluptas, aliquam quia ipsa possimus nihil ipsum.</title>
 </head>
 <body>
     <h1>Das hier ist eine Test Datei!</h1>
