--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="sytles.css">
 </head>
 <body id="body">
     <h1>Weather App</h1>
