--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <input type="text" id="stadt" placeholder="Stadt" required>
     <button onclick="update()" id="search">Suchen</button>
     <p id="output"></p>
+    <p>Hallo Vera</p>
 </body>
 </html>
